--- a/_posts/2013-10-06-start.md
+++ b/_posts/2013-10-06-start.md
@@ -14,6 +14,6 @@ tags: []
 
 这不是一个可以多言语的时代，信息太多，来不及看。这也不是一个安静的时代，安静得久了，自己都忘了存在。或许每个人都能把握言语的多少，才是最适合的。所以我，试着记录一些成长的痕迹，留待无聊之时翻阅，或者跟朋友们保持着不可见的联系。这些文字的背后，不是我，是当时的我。
 
-这两年，惭惭养成了不用手机不上网的习惯，因为上班不允许携带。只是书依然没有看多少，也是因为上班之外，竟找不到一处可以方便看书的地方。另一边家里附近的读书馆不错，但走路太远，去得极少。这边家里附近早上的肯德基餐厅还算不错，只是早上时间很有限，不适合很厚的书，或许这边的图书馆可以试试，不知晚上何时关门。
+这两年，惭惭养成了不用手机不上网的习惯，因为上班不允许携带。只是书依然没有看多少，也是因为上班之外，竟找不到一处可以方便看书的地方。另一边家里附近的图书馆不错，但走路太远，去得极少。这边家里附近早上的肯德基餐厅还算不错，只是早上时间很有限，不适合很厚的书，或许这边的图书馆可以试试，不知晚上何时关门。
 
 而我，有一个爱好，是看看书，还有一个爱好，是读读代码。
