--- a/_posts/2020-02-09-tools.md
+++ b/_posts/2020-02-09-tools.md
@@ -28,7 +28,7 @@ title: "迷失在工具之间"
 # LibreOffice
 然后是真的免费。
 
-没用广告。没用勉强的多余小功能，比如附加限制大小的云盘文件。界面上可能比不了Word，但是有自己的特点和完整性。符合开源一贯的任性，只做一件事，绝不乱七八糟。当然可能是我还不会用吧，目前还是没能上手。
+没有广告。没有勉强的多余小功能，比如附加限制大小的云盘文件。界面上可能比不了Word，但是有自己的特点和完整性。符合开源一贯的任性，只做一件事，绝不乱七八糟。当然可能是我还不会用吧，目前还是没能上手。
 
 # 手机，Android Pad和iPad
 纠结。也不纠结。
@@ -37,6 +37,6 @@ title: "迷失在工具之间"
 
 所以哪有那么多纠结，哪有什么完美的工具或是不堪的工具。结合着用吧。
 
-于是一直迷失在工具之间。没用最好，甚至没用更好，只有都好。
+于是一直迷失在工具之间。没有最好，甚至没有更好，只有都好。
 
-最好的，永远都是工具后面的那颗脑袋，我的脑袋。至于选择那些工具，嗯，看心情！
+最好的，永远都是工具后面的那颗脑袋，我的脑袋。至于选择哪些工具，嗯，看心情！
